--- a/index.html
+++ b/index.html
@@ -435,9 +435,9 @@
     <div class="container">
         <!-- Header -->
         <header class="header">
-            <div class="header-label">Homo Gullibilis Interactive</div>
+            <div class="header-label">A How We Got Here Interactive</div>
             <h1>The 2-4-6 Task</h1>
-            <p class="subtitle">A window into how you think</p>
+            <p class="subtitle">The science of irrationality</p>
         </header>
 
         <!-- Game Section -->
@@ -533,7 +533,7 @@
 
             <div class="button-row" style="margin-top: 2rem;">
                 <button class="btn" onclick="resetGame()">Try Again</button>
-                <a href="https://homogullibilis.substack.com" class="btn btn-primary" style="text-decoration: none;">Read the Article</a>
+                <a href="https://j0nathanf0wler.substack.com/" class="btn btn-primary" style="text-decoration: none;">Read the Article</a>
             </div>
         </div>
 
@@ -541,7 +541,7 @@
         <footer class="footer">
             <p class="footer-text">
                 Based on Peter Wason's 1960 experiment on confirmation bias.<br>
-                Part of <a href="https://homogullibilis.substack.com" class="footer-link">Homo Gullibilis</a> — a series on why we believe what we believe.
+                Part of <a href="https://j0nathanf0wler.substack.com/" class="footer-link">How We Got Here</a> — a Substack on the cognitive science of MAGA's bullshit.
             </p>
         </footer>
     </div>
