--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
 
             <div class="button-row" style="margin-top: 2rem;">
                 <button class="btn" onclick="resetGame()">Try Again</button>
-                <a href="https://j0nathanf0wler.substack.com/" class="btn btn-primary" style="text-decoration: none;">Read the Article</a>
+                <a href="https://j0nathanf0wler.substack.com/p/confirmation-bias-part-1" class="btn btn-primary" style="text-decoration: none;">Read the Article</a>
             </div>
         </div>
 
