--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
     <div class="container">
         <!-- Header -->
         <header class="header">
-            <div class="header-label">A How We Got Here Interactive</div>
+            <div class="header-label">A Homo gullibilis Interactive</div>
             <h1>The 2-4-6 Task</h1>
             <p class="subtitle">The science of irrationality</p>
         </header>
@@ -541,7 +541,7 @@
         <footer class="footer">
             <p class="footer-text">
                 Based on Peter Wason's 1960 experiment on confirmation bias.<br>
-                Part of <a href="https://j0nathanf0wler.substack.com/" class="footer-link">How We Got Here</a> — a Substack on the cognitive science of MAGA's bullshit.
+                Part of <a href="https://j0nathanf0wler.substack.com/" class="footer-link">Homo gullibilis</a> — a Substack on the cognitive science of MAGA's bullshit.
             </p>
         </footer>
     </div>
